# metadata_deleter

./: .flake8  LICENSE  README.md  metadata_deleter.py  pyproject.toml
modified_files/: readme.txt
src/constants/: constants.py
src/file_types/: base_file_object.py  docx_obj.py  file_viewer.py  image.py
src/tools/: commands.py  files.py  notification.py  print_colorful.py
