[tool.poetry]
name = "metdel"
version = "0.1.0"
description = ""
authors = ["practicesavedtheworld"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
mypy = "^1.6.1"
python-docx = "^1.0.1"
exif = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
